web_v1.cfn.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: SampleWebServer
Mappings:
  Config:
    EC2:
      TagName: webapp
      KeyName: miyazaki # Name of an existing Amazon EC2 key pair for SSH access
      AMIId: ami-035be7bafff33b6b6
      InstanceType: t3.nano
    VPC:
      StackName: SampleVPCStack

Resources:
  #
  # WebApplication
  #
  WebServerInstance:
    Type: AWS::EC2::Instance
    # Setup WebApplication
    Metadata:
      AWS::CloudFormation::Init:
        config:
          commands:
            setlocale:
              command: "timedatectl set-timezone Asia/Tokyo"
              ignoreErrors: true
            sethostname:
              command: "hostnamectl set-hostname webapp"
              ignoreErrors: true
          packages:
            yum:
              httpd: []
              php: []
          files:
            /var/www/html/index.php:
              content: !Sub |
                <?php
                echo "<h1>AWS CloudFormation Sample PHP Application</h1>";
                echo "<p>1</p>";
                ?>
              mode: "000644"
              owner: apache
              group: apache
          services:
            sysvinit:
              httpd:
                enabled: true
                ensureRunning: true
    # Launch Instance
    Properties:
      InstanceType: !FindInMap [Config, EC2, InstanceType]
      ImageId: !FindInMap [Config, EC2, AMIId]
      KeyName: !FindInMap [Config, EC2, KeyName]
      SubnetId: {"Fn::ImportValue": !Join [":", [!FindInMap [Config, VPC, StackName], PublicOneId]]}
      SecurityGroupIds:
        - !GetAtt SecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: !FindInMap [Config, EC2, TagName]
      UserData: !Base64
        "Fn::Sub": |
          #!/bin/bash -xe
          yum update -y
          #Install the file and packages from the metadata
          /opt/aws/bin/cfn-init -v -s ${AWS::StackName} -r WebServerInstance --region ${AWS::Region}
          # Signal the status from cfn-init
          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebServerInstance --region ${AWS::Region}
    CreationPolicy:
      ResourceSignal:
        Timeout: PT3M

  #
  # SecurityGroup for WebApplication
  #
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join ["-", [ec2, !FindInMap [Config, EC2, TagName]]]
      GroupDescription: From Internet
      VpcId: {"Fn::ImportValue": !Join [":", [!FindInMap [Config, VPC, StackName], VpcId]]}
      SecurityGroupIngress:
        - Description: http
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - Description: ssh
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

Outputs:
  url:
    Description: URL
    Value: !Join ["://", [http, !GetAtt WebServerInstance.PublicIp]]
    Export:
      Name: URL
